# gaap-need-work-kilo

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  API.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  FINAL_STATUS.md  GLM5_INTELLIGENT_SYSTEM.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  Makefile.security  PRODUCTION_CHECKLIST.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  RUNNING_STATUS.md  SECURITY.md  SETUP_INSTRUCTIONS.md  STARTING_GUIDE.md  TROUBLESHOOTING.md  WEB_APP_FIXES_SUMMARY.md  WEB_APP_READY.md  alembic.ini  coverage.json  docker-compose.monitoring.yml  docker-compose.yml  e2e_sovereign_demo.py  gaap_js_lab.py  gaap_sovereign_mission.py  indeed_js_strike.py  indeed_strike.py  (+12 more)
.gaap/: constitution.yaml  gaap.db  identity.json
.gaap/debt/: proposals.json
.gaap/memory/: episodic_memory.json
.gaap/reputation/: reputation.json
.gaap/roles/: architect.yaml  coder.yaml  critic.yaml  js_bounty_researcher.yaml  researcher.yaml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: agent_eval.yml  ci.yml  frontend.yml  pre-commit.yml  security.yml
.kilo/: README.md  project_context.json
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_indexes.py  003_add_constraints.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  EVENT_SYSTEM.md  FRONTEND_DEVELOPMENT.md  INTEGRATION_STATUS.md  PERFORMANCE_BENCHMARKS.md  PROVIDERS.md  QUICK_REFERENCE.md  RESEARCH_GUIDE.md  SECURITY.md  SPEC_COMPLETION_MATRIX.md  TROUBLESHOOTING_FLOWCHARTS.md  WEB_GUI_GUIDE.md
docs/adrs/: 001-why-ooda.md  002-database-choice.md  003-provider-abstraction.md
docs/api/: README.md  endpoints.md  websocket.md
docs/deployment/: README.md  cloud.md  docker.md  kubernetes.md  monitoring.md
docs/developers/: README.md  architecture.md  contributing.md  setup.md
docs/evolution_plan_2026/: 00_GAP_ANALYSIS.md  01_MEMORY_AND_DREAMING.md  02_MCP_AND_TOOLS.md  03_WORLD_SIMULATION.md  04_FRACTAL_SECURITY.md  05_METACOGNITION_AND_DOUBT.md  06_SWARM_PROTOCOL_GISP.md  07_LOCAL_MODEL_DISTILLATION.md  08_HOLOGRAPHIC_INTERFACE.md  09_DEEP_OBSERVABILITY.md  10_VIRTUAL_COLLEAGUE.md  11_FORMAL_VERIFICATION.md  12_UX_STRATEGY.md  13_COMPUTER_USE_VISION.md  14_JUST_IN_TIME_TOOLING.md  15_MULTI_MODAL_IO.md  16_AXIOMATIC_CORE.md  17_DEEP_RESEARCH_AGENT.md  17_DEEP_RESEARCH_AGENT_SPEC.md  18_CODE_LEVEL_UPGRADES.md  19_ADVANCED_INTERACTION.md  20_SOTA_RESEARCH_HUB.md  21_ENGINE_AUDIT_SPEC.md  22_LAYER1_AUDIT_SPEC.md  23_LAYER2_AUDIT_SPEC.md  24_LAYER3_AUDIT_SPEC.md  25_MEMORY_AUDIT_SPEC.md  26_HEALING_AUDIT_SPEC.md  27_OPS_AND_CI.md  28_KNOWLEDGE_INGESTION.md  29_TECHNICAL_DEBT_AGENT.md  30_BUG_BOUNTY_STRATEGY.md  31_WEB_LOGIC_MAPPER.md  32_ADVERSARIAL_PROBER_SPEC.md  33_JS_DEEP_DECODER.md  34_STATE_MACHINE_ENGINE.md  35_STEALTH_EVASION.md  36_AUTO_REPORT_ARCHITECT.md  37_ROUTER_AUDIT_SPEC.md  38_PROVIDERS_AUDIT_SPEC.md  (+14 more)
docs/examples/: benchmark.py  custom_provider.py  multi_turn_chat.py  quick_start.py  streaming.py
docs/monitoring/: README.md
docs/reference/: COMPARISON_MATRIX.md  REFERENCE_TABLES.md
docs/users/: README.md  providers.md  quickstart.md  web-interface.md
examples/: 01_quick_start.py  02_observability.py  03_rate_limiting.py  04_custom_provider.py  05_error_handling.py  06_complete_workflow.py  07_testing_guide.py  README.md  secrets_demo.py  v2_grand_tour.py
frontend/: .env.example  .env.production  Dockerfile  README.md  eslint.config.mjs  index.html  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  start.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: dashboard.spec.ts  providers.spec.ts  sessions.spec.ts  test-utils.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
gaap/: __init__.py  gaap_engine.py  logging_config.py  status_page.py  tracing.py
gaap/api/: __init__.py  auth.py  budget.py  chat.py  config.py  context.py  fastapi_app.py  healing.py  knowledge.py  main.py  maintenance.py  memory.py  middleware.py  models.py  providers.py  providers_status.py  research.py  routes.py  security_middleware.py  sessions.py  swarm.py  system.py  validators.py  websocket.py
gaap/cache/: __init__.py  base.py  disk_cache.py  memory_cache.py  response_cache.py
gaap/cli/: __init__.py  dashboard.py  fuzzy_menu.py  main.py  tui.py
gaap/context/: __init__.py  call_graph.py  external_brain.py  hcl.py  orchestrator.py  pkg_agent.py  semantic_index.py  smart_chunking.py
gaap/core/: __init__.py  artifacts.py  axioms.py  base.py  confidence_scorer.py  config.py  contrastive.py  events.py  exceptions.py  governance.py  knowledge_map.py  logging.py  memory_guard.py  observability.py  observer.py  persona.py  rate_limiter.py  reflection.py  secrets.py  semantic_distiller.py  semantic_pressure.py  signatures.py  streaming_auditor.py  tools.py  types.py  world_model.py
gaap/db/: __init__.py  config.py
gaap/healing/: __init__.py  healer.py  healing_config.py  reflexion.py
gaap/knowledge/: __init__.py  ast_parser.py  cheat_sheet.py  ingestion.py  knowledge_config.py  usage_miner.py
gaap/layers/: __init__.py  active_lesson_injector.py  code_auditor.py  evidence_critic.py  execution_schema.py  got_strategic.py  layer0_interface.py  layer1_strategic.py  layer2_config.py  layer2_learner.py  layer2_tactical.py  layer3_config.py  layer3_execution.py  mcts_logic.py  native_function_caller.py  (+8 more)
missions/: indeed_logic_params.txt  indeed_mission.json
monitoring/: alertmanager.yml  alerts.yml  blackbox-config.yml  loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: account_requirements.py  benchmark.py  cost_monitor.py  evaluate_agent.py  feedback_loop.py  get_kilo_token.py  kilo_gateway_demo.py  kilo_multi_account_demo.py  learn_repo_prototype.py  pre-push.sh  setup_kilo_account.py  smart_accounts_demo.py  watch_kilo_tokens.py
tests/: conftest.py
(+420 files in other folders)
