[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaap"
version = "0.9.0"
description = "General-purpose AI Architecture Platform - Multi-layer LLM orchestration system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GAAP Team", email = "team@gaap.io"}
]
keywords = ["ai", "llm", "orchestration", "agents", "multi-layer", "rag", "vector-db", "llmops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "dataclasses-json>=0.6.0",
    "pyyaml>=6.0",
    "orjson>=3.9.0",
    "numpy>=1.24.0",
    "structlog>=23.0.0",
    "python-json-logger>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.3.0",
    "networkx>=3.2.1",
    "docker>=6.0.0",
    "cryptography>=42.0.0",
    "z3-solver>=4.12.0",
    "icontract>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "textual>=0.45.0",
    "questionary>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "g4f>=0.2.0",
    "radon>=6.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "tree-sitter>=0.20.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-vcr>=1.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "pytest-randomly>=3.15.0",
    "vcrpy>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "debugpy>=1.8.0",
    "py-spy>=0.3.0",
    "memory-profiler>=0.61.0",
]
local = [
    "llama-cpp-python>=0.2.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
gaap = "gaap.cli.main:main"
gaap-web = "gaap.web.app:run_web"

[project.entry-points."gaap.commands"]
web = "gaap.cli.commands.web:cmd_web"

[project.urls]
Homepage = "https://github.com/gaap-system/gaap"
Documentation = "https://docs.gaap.io"
Repository = "https://github.com/gaap-system/gaap"
Issues = "https://github.com/gaap-system/gaap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaap*"]

[tool.setuptools.package-data]
gaap = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["gaap"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", "venv", "__pycache__"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "httpx.*", "yaml.*", "orjson.*", "structlog.*", "g4f.*", "chromadb.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
    "gauntlet: marks tests as E2E gauntlet scenarios (skip by default)",
    "chaos: marks tests as chaos/fault injection tests",
    "vcr: marks tests that use VCR cassettes",
    "benchmark: marks tests as benchmarks (skip by default)",
    "e2e: marks tests as end-to-end requiring real services",
    "requires_api: marks tests that require real API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["gaap"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101"]
